Supported posting comment feature.
git-svn-id: http://svn.coderepos.org/share/lang/gauche/oldtype/trunk@15903 d0d07461-0603-4401-acd4-de1884942a52

--- a/Kahua/oldtype/oldtype/oldtype.css
+++ b/Kahua/oldtype/oldtype/oldtype.css
@@ -680,3 +680,15 @@ strong.notice {
     background-color: #3875d7;
     color: white;
 }
+
+pre.comment {
+	margin-left:	0.5em;
+	font-size:      medium;
+	padding-left:   0.5em;
+	margin-top:     1px;
+	margin-bottom:  1px;
+}
+
+table.comment {
+        width: 70%;
+}
