Added the Google search box to header of OldType pages.
git-svn-id: http://svn.coderepos.org/share/lang/gauche/oldtype/trunk@19747 d0d07461-0603-4401-acd4-de1884942a52

--- a/Kahua/oldtype/oldtype/oldtype.css
+++ b/Kahua/oldtype/oldtype/oldtype.css
@@ -693,3 +693,19 @@ table.comment {
         width: 70%;
 	text-align: left;
 }
+
+td.header_L {
+        border-style: solid;
+        border-color: #ffffff;
+        border-width: 1px;
+	align:        left;
+}
+
+td.header_R {
+        border-style: solid;
+        border-color: #ffffff;
+        border-width: 1px;
+	align:        right;
+}
+
+
