Supported HTML format for description part of RSS 2.0 feed.
git-svn-id: http://svn.coderepos.org/share/lang/gauche/oldtype/trunk@22008 d0d07461-0603-4401-acd4-de1884942a52

--- a/src/Test.no-timeline.sexp.master
+++ b/src/Test.no-timeline.sexp.master
@@ -25,4 +25,5 @@
   (annotation)
   (text)
   (distribution))
- (plain "* UnitTest用のサンプルファイル" "----" "*** start" "*** Entry1" "*** Entry2" "*** end" ""))
+ (plain "* UnitTest用のサンプルファイル" "----" "*** start" "*** Entry1" "*** Entry2" "*** end" "")
+ (rich "<h2>UnitTest用のサンプルファイル" "</h2><hr><h4>start" "</h4><h4>Entry1" "</h4><h4>Entry2" "</h4><h4>end" "</h4>"))
