--- a/src/Test.sexp.master
+++ b/src/Test.sexp.master
@@ -98,4 +98,5 @@
    (8208 1)
    (13317 6 5 4 3)
    (13304 2)))
- (plain "* UnitTest用のサンプルファイル" "----" "*** start" "*** Entry1" "*** Entry2" "*** end" ""))
+ (plain "* UnitTest用のサンプルファイル" "----" "*** start" "*** Entry1" "*** Entry2" "*** end" "")
+ (rich "<h2>UnitTest用のサンプルファイル" "</h2><hr><h4>start" "</h4><h4>Entry1" "</h4><h4>Entry2" "</h4><h4>end" "</h4>"))
