Supported pagerank of Related pages.
git-svn-id: http://svn.coderepos.org/share/lang/gauche/oldtype/trunk@22655 d0d07461-0603-4401-acd4-de1884942a52

--- a/Kahua/oldtype/oldtype/oldtype.css
+++ b/Kahua/oldtype/oldtype/oldtype.css
@@ -708,4 +708,12 @@ td.header_R {
 	align:        right;
 }
 
-
+a.large {
+        font-size: large;
+}
+a.normal {
+	font-size: normal;
+}
+a.small {
+	font-size: small;
+}
