Bugfix: comment-data command.
git-svn-id: http://svn.coderepos.org/share/lang/gauche/oldtype/trunk@23038 d0d07461-0603-4401-acd4-de1884942a52

--- a/Kahua/oldtype/oldtype/oldtype.css
+++ b/Kahua/oldtype/oldtype/oldtype.css
@@ -538,7 +538,7 @@ p.oldtype {
 
 pre.verb {
 	color: #333333;
-	background-color: #e6e6fa;
+	background-color: #c6c7d3;
         padding-top: 0.0em;
         padding-bottom: 0.0em;
 	padding: 0.0em;
@@ -682,6 +682,14 @@ strong.notice {
 }
 
 pre.comment {
+	margin-left:	0.5em;
+	font-size:      medium;
+	padding-left:   0.5em;
+	margin-top:     1px;
+	margin-bottom:  1px;
+}
+
+p.comment {
 	margin-left:	0.5em;
 	font-size:      medium;
 	padding-left:   0.5em;
